--- a/doc/20250524_1강 작업.md
+++ b/doc/20250524_1강 작업.md
@@ -1,3 +1,30 @@
+# 공통 설정
+- 작업경로
+- D:\web-front-reactCls2
+
+# 2025.05.24
+```
+nvm use 14.16.0
+nvm list installed
+npm --v
+npm install
+
+nvm list
+nvm use 20.18.1
+* 20.18.1 (Currently using 64-bit executable)
+
+리액트 생성
+npx create-react-app app
+cd app
+
+리액트 시작
+npm start
+
+소스 다운로드
+node_modues 제외 zip
+npm i
+```
+
 # 노드 리액트 설치 프로젝트 생성 실행
 [1단계]
 - 노드 실행
