--- a/doc/20250524_1강 작업.md
+++ b/doc/20250524_1강 작업.md
@@ -2,6 +2,45 @@
 - 작업경로
 - D:\web-front-reactCls2
 
+닷홈
+웹호스팅
+무료호스팅
+https://www.dothome.co.kr/web/free/index.php
+
+접속 정보
+FTP shlee1990
+FTP 비밀번호 cjswo124!
+shlee1990.dothome.co.kr
+
+웹서버 아이피 112.175.185.145
+웹서버 정보 Apache 2.4 
+PHP 버전	PHP 8.4	  
+PHP 버전 변경 8.4
+
+웹루트 디렉토리	/hosting/shlee1990/html
+
+FTP 서버 112.175.185.145
+	shlee1990.dothome.co.kr
+FTP 아이디 shlee1990
+FTP 암호	cjswo124!
+FTP 접속설정	접속허용 접속제한   
+
+DB 정보
+DB 명	shlee1990	  
+DB 정보	MySQL 8.0
+DB 아이디	shlee1990	  
+DB 암호	cjswo124!
+	
+기본 주소	shlee1990.dothome.co.kr
+MySQL ID	shlee1990 (계정아이디와 동일)
+MySQL 암호	cjswo124!
+MySQL 관리(UTF-8)	shlee1990.dothome.co.kr/myadmin
+웹로그 보기	shlee1990.dothome.co.kr/weblog (유료회원 전용)
+접속방법
+
+파일질라 다운로드
+알드라이브 다운로드
+
 # 2025.05.24
 ```
 nvm use 14.16.0
@@ -23,6 +62,26 @@ npm start
 소스 다운로드
 node_modues 제외 zip
 npm i
+
+빌드
+배포할 url 주소를 package.json에 넣어주어야 한다
+"homepage": "http://localhost/shop"
+
+C:\AutoSet10\public_html
+build to shop 폴더 변경
+
+로컬 웹서버 배포
+http://localhost/shop/
+
+공개 닷홈 배포 호스팅
+shlee1990.dothome.co.kr/shop
+
+공개 github 배포 호스팅
+
+cd app
+npm run build
+
+01강 리액트 프로젝트  생성/실행/빌드/배포
 ```
 
 # 노드 리액트 설치 프로젝트 생성 실행
