--- a/doc/20250524_1강 작업.md
+++ b/doc/20250524_1강 작업.md
@@ -1,6 +1,6 @@
 # 공통 설정
 - 작업경로
-- D:\web-front-reactCls2
+- D:\web-front-reactCls
 
 닷홈
 웹호스팅
@@ -80,9 +80,22 @@ shlee1990.dothome.co.kr/shop
 
 cd app
 npm run build
-
-01강 리액트 프로젝트  생성/실행/빌드/배포
 ```
+
+# 01강 리액트 프로젝트 생성/실행/빌드/배포
+- 작업폴더 설정
+D:\web-front-reactCls
+
+- 생성
+npx create-react-app kurly
+
+- 실행
+- 빌드
+- 배포
+
+닷홈 배포
+
+깃허브 배포
 
 # 노드 리액트 설치 프로젝트 생성 실행
 [1단계]
