--- a/doc/20250524_1강 작업.md
+++ b/doc/20250524_1강 작업.md
@@ -1,3 +1,4 @@
+
 # 공통 설정
 - 작업경로
 - D:\web-front-reactCls
@@ -90,12 +91,35 @@ D:\web-front-reactCls
 npx create-react-app kurly
 
 - 실행
+cd kurly
+npm start
+
 - 빌드
+cd kurly
+npm run build
+
 - 배포
+package.json
 
 닷홈 배포
+    업로드
+    shlee1990.dothome.co.kr/kurly
 
 깃허브 배포
+    드래그 앤 드롭
+        New 저장소 생성 
+        web-front-reactClsTest
+        
+        https://sangholee1990.github.io/web-front-reactClsTest/
+        
+        https://github.com/sangholee1990/web-front-reactClsTest
+        kurly
+
+        https://sangholee1990.github.io/web-front-reactClsTest/kurly
+
+        .github.io/'Repository
+
+    깃설정-스테이징-커밋-푸시-페이징
 
 # 노드 리액트 설치 프로젝트 생성 실행
 [1단계]
