--- a/doc/20250524_1강 작업.md
+++ b/doc/20250524_1강 작업.md
@@ -67,6 +67,7 @@ npm i
 빌드
 배포할 url 주소를 package.json에 넣어주어야 한다
 "homepage": "http://localhost/shop"
+"homepage": "https://sangholee1990.github.io/web-front-reactClsOper"
 
 C:\AutoSet10\public_html
 build to shop 폴더 변경
@@ -121,16 +122,60 @@ package.json
 
     깃설정-스테이징-커밋-푸시-페이징
 
-# 노드 리액트 설치 프로젝트 생성 실행
-[1단계]
-- 노드 실행
-- 리액트 설치
-- 리액트 프로젝트 생성
-- 리액트 프로젝트 실행
-- 리액트 구조 분석 개념 이해
-- 리액트 프로젝트 빌드
-- 리액트 프로젝트 배포
 
 
-[2단계]
-- 테스트
+# 1강_02_0524_리액트_프로젝트_생성_실행_빌드_배포
+0. 프로젝트 폴더 : 1강_02_0524_리액트_프로젝트_생성_실행_빌드_배포
+
+1. 리액트 프로젝트 생성
+
+   npx create-react-app kurly
+
+2. 리액트 프로젝트 실행
+
+  cd kurly
+  npm start
+
+3-1. 리액트 프로젝트 빌드 
+     => 닷홈
+     moonjong7.dothome.co.kr
+     anstjswhd0105# 
+
+   1) package.json
+    :
+     },
+     "homepage" : "http://moonjong7.dothome.co.kr/shop"
+    }
+
+   2) GitBash 새터미널
+      cd kurly
+      npm run build
+
+
+
+    => 깃허브
+     moonjongjs 로그인
+   1) package.json
+    :
+     },
+     "homepage" : "http://moonjongjs.github.io/shop29"
+    }
+
+ 2) GitBash 새터미널
+      cd kurly
+      npm run build
+
+
+4. 리액트 프로젝트 배포
+   - 닷홈 배포 - 업로드
+     닷호 [shop] 폴더 안에 => [build] 폴더 안에 있는 모든 파일 업로드
+    http://moonjong7.dothome.co.kr/shop
+
+
+   - 깃허브 배포 - 드래그 앤 드롭 - 페이징
+     new > 리파지토리 생성 > shop29 > 리파지토리 생성 >  드래그 앤 드롭   >  Commit changes 클릭 > 상단에 메뉴 settings 클릭 >  좌측 하단  Pages 클릭 > GitHub Pages 아래 중간 Branch > None 클릭 > main 선택 > save 클릭  > 1분 대기 > 새로고침 > Visit site 클릭 홈페이지이동
+
+   - 깃허브 배포 - 깃설정 - 스테이징 - 커밋 - 푸쉬 - 페이징
+
+
+
