--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -2,8 +2,8 @@
 # 공통 설정
 - 작업경로
 - D:\web-front-reactCls
-
-닷홈
+- 닷홈 설정 정보
+```
 웹호스팅
 무료호스팅
 https://www.dothome.co.kr/web/free/index.php
@@ -41,6 +41,44 @@ MySQL 관리(UTF-8)	shlee1990.dothome.co.kr/myadmin
 
 파일질라 다운로드
 알드라이브 다운로드
+```
+
+# 2025.05.31
+- 푸른마을 웹 프로젝트 제이쿼리 포함
+  - 리액트 프로젝트 생성
+```
+npx create-react-app app
+cd app
+<!-- npm run build -->
+npm start
+```
+  - 리액트 프로젝트 정적/동적 폴더 정리
+    - 정적폴더
+      - css
+      - images
+      - scripts
+      - index.html
+    - 동적폴더
+      - index.js
+      - components
+      - WrapComonent.jsx (JavaScript XML 가상 태그)
+      - Wrap
+        - 헤더 HeaderComonent.jsx
+        - 메인 MainComonent.jsx
+          - main
+            - Section1Comonent.jsx
+            - Section2Comonent.jsx
+            - Section3Comonent.jsx
+        - 푸터 FooterComonent.jsx
+
+  - 컴포넌트 기획 분석 설계 제작
+  - 푸른마을 웹 프로젝트 템플릿 JSX 기본 문법
+  - 바벨 설치와 자바스크립트 제이쿼리 구현
+
+- 제이쿼리 삭제 리액트 구현
+  - 푸른마을 웹 프로젝트 제이쿼리 삭제 리액트 구현
+
+
 
 # 2025.05.24
 ```
