--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -62,14 +62,15 @@ npm start
       - index.js
       - components
       - WrapComonent.jsx (JavaScript XML 가상 태그)
-      - Wrap
-        - 헤더 HeaderComonent.jsx
-        - 메인 MainComonent.jsx
+      - wrap
+        - HeaderComonent.jsx  헤더
+        - MainComonent.jsx    메인
           - main
             - Section1Comonent.jsx
             - Section2Comonent.jsx
             - Section3Comonent.jsx
-        - 푸터 FooterComonent.jsx
+        - FooterComonent.jsx    푸터 
+        - ModalComonent.jsx 
 
   - 컴포넌트 기획 분석 설계 제작
   - 푸른마을 웹 프로젝트 템플릿 JSX 기본 문법
