--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -74,7 +74,13 @@ npm start
 
   - 컴포넌트 기획 분석 설계 제작
   - 푸른마을 웹 프로젝트 템플릿 JSX 기본 문법
+    - 템플릿 구성과 문법
+      - class=  > className= 변경
+      - href="#"  > href="!#" 변경
+      - <img>  > <img/>
+
   - 바벨 설치와 자바스크립트 제이쿼리 구현
+  - 빌드
 
 - 제이쿼리 삭제 리액트 구현
   - 푸른마을 웹 프로젝트 제이쿼리 삭제 리액트 구현
