--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -44,6 +44,10 @@ MySQL 관리(UTF-8)	shlee1990.dothome.co.kr/myadmin
 ```
 
 # 2025.05.31
+<!-- [text](../../web-front-vueCls/20250322_web-front-vueReport) [text](../../web-front-vueCls/20250329_web-front-jqueryShopMall) [text](../../web-front-vueCls/20250329_web-front-vueCdnjQueryShopMall) [text](../../web-front-vueCls/20250329_web-front-vueClijQueryShopMall) [text](../../web-front-vueCls/20250412_web-front-vueCliShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliJsonShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliVuexShopMall) [text](../../web-front-vueCls/20250426_web-front-vueCliVuexModuleRouterShopMall) [text](../../web-front-vueCls/20250426_web-front-vueCliVuexShopMall) -->
+
+20250531_appJquery
+
 - 푸른마을 웹 프로젝트 제이쿼리 포함
   - 리액트 프로젝트 생성
 ```
@@ -81,8 +85,27 @@ npm start
 
   - 바벨 설치와 자바스크립트 제이쿼리 구현
     - 바벨 Babel 설치 연결
-    
+```
+# index.html
+바벨 CDN 설정
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+타입 설정
+<script src="./script/script.js" type="text/babel" defer></script>
+```  
+
   - 빌드
+```
+# package.json 내 homepage 설정
+"homepage": "shlee1990.dothome.co.kr/appJquery"
+
+cd 20250531_appJquery
+npm run build
+
+
+http://shlee1990.dothome.co.kr/build
+http://shlee1990.dothome.co.kr/green
+```
 
 - 제이쿼리 삭제 리액트 구현
   - 푸른마을 웹 프로젝트 제이쿼리 삭제 리액트 구현
