--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -105,7 +105,21 @@ npm run build
 
 http://shlee1990.dothome.co.kr/build
 http://shlee1990.dothome.co.kr/green
+https://sangholee1990.github.io/green
+
+스테이징 > 커킷 > 푸시
+Settings 설정 > 페이징 > Branch 브랜치 > main 선택 > save 클릭 > 약 1분 대기
+> 새로고침 
 ```
+
+- 2강 리액트 프로젝트 제이쿼리 삭제
+```
+cd 20250531_appReactProps
+npm 
+```
+  - 상태관리
+  - 프롭스
+  - 이벤트
 
 - 제이쿼리 삭제 리액트 구현
   - 푸른마을 웹 프로젝트 제이쿼리 삭제 리액트 구현
