--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -115,7 +115,7 @@ Settings 설정 > 페이징 > Branch 브랜치 > main 선택 > save 클릭 > 약
 - 2강 리액트 프로젝트 제이쿼리 삭제
 ```
 cd 20250531_appReactProps
-npm 
+npm i
 ```
   - 상태관리
   - 프롭스
