--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -117,7 +117,7 @@ Settings 설정 > 페이징 > Branch 브랜치 > main 선택 > save 클릭 > 약
 cd 20250531_appReactProps
 npm i
 ```
-  - 상태관리
+  - 상태관리 state: 모든 변수 관리, 구조 객체 구성
   - 프롭스
   - 이벤트
 
