--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -44,7 +44,11 @@ MySQL 관리(UTF-8)	shlee1990.dothome.co.kr/myadmin
 ```
 
 # 2025.06.14
-
+sass 설치
+cd 20250614_appReactProps
+npm i sass sass-loader
+<!-- npm i sass -->
+<!-- npm i sass-loader -->
 
 
 # 2025.05.31
