--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -50,6 +50,15 @@ npm i sass sass-loader
 <!-- npm i sass -->
 <!-- npm i sass-loader -->
 
+sass -> scss
+
+- 컴포넌트별 scss 스타일 import 적용하기
+[wrap]
+  WrapComonent.jsx
+  [scss]
+    WrapComonent.scss
+
+
 
 # 2025.05.31
 <!-- [text](../../web-front-vueCls/20250322_web-front-vueReport) [text](../../web-front-vueCls/20250329_web-front-jqueryShopMall) [text](../../web-front-vueCls/20250329_web-front-vueCdnjQueryShopMall) [text](../../web-front-vueCls/20250329_web-front-vueClijQueryShopMall) [text](../../web-front-vueCls/20250412_web-front-vueCliShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliJsonShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliVuexShopMall) [text](../../web-front-vueCls/20250426_web-front-vueCliVuexModuleRouterShopMall) [text](../../web-front-vueCls/20250426_web-front-vueCliVuexShopMall) -->
