--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -58,8 +58,42 @@ sass -> scss
   [scss]
     WrapComonent.scss
 
+# 2025.06.28
+- 설치 리액트 라우터 돔
+npm i react-router-dom
+
+- index.js 브라우저 라우터 (브라우저) 컴포넌트 생성, 최상위 컴포넌트 감
+- WrapComonent.jsx 라우츠/라우트 컴포넌트 생성
+- WrapComonent.jsx 패스네임 지정, 엘리먼트에 컴포넌트를 배치
+    고정페이지
+- HeaderComonent.jsx 아울렛, 링크 (컴포넌트) 생성
+- HeaderComonent.jsx 아울렛 컴포넌트 배치, 링크 컴포넌트 배치, 패스네임 설정
 
 
+# 2025.06.14
+복습 필요
+  <BrowserRouter>
+        <Routes>
+            <Route path="/" element={<HeaderComonent />}> {/* 고정 노출 페이지 */}
+
+                <Route index  element={<MainComonent modalOpenEvent={modalOpenEvent} />} /> {/* 처음 노출 페이지 */}                    
+                
+                <Route path="/main" element={<MainComonent modalOpenEvent={modalOpenEvent} />} /> {/* 링크 클릭 교체 페이지 */}
+                <Route path="/sub1" element={<Sub1Component />} /> {/* 링크 클릭 교체 페이지 */}
+                <Route path="/sub2" element={<Sub2Component />} /> {/* 링크 클릭 교체 페이지 */}
+                <Route path="/sub3" element={<Sub3Component />} /> {/* 링크 클릭 교체 페이지 */}
+                <Route path="/sub4" element={<Sub4Component />} /> {/* 링크 클릭 교체 페이지 */}
+
+            </Route>    
+        </Routes>            
+        
+        {/* 고정 노출 페이지 */}
+        <FooterComonent />
+        <ModalComonent 모달={state.모달} modalCloseEvent={modalCloseEvent} />
+        {/* 고정 노출 페이지 */}
+
+    </BrowserRouter>       
+    
 # 2025.05.31
 <!-- [text](../../web-front-vueCls/20250322_web-front-vueReport) [text](../../web-front-vueCls/20250329_web-front-jqueryShopMall) [text](../../web-front-vueCls/20250329_web-front-vueCdnjQueryShopMall) [text](../../web-front-vueCls/20250329_web-front-vueClijQueryShopMall) [text](../../web-front-vueCls/20250412_web-front-vueCliShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliJsonShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliShopMall) [text](../../web-front-vueCls/20250419_web-front-vueCliVuexShopMall) [text](../../web-front-vueCls/20250426_web-front-vueCliVuexModuleRouterShopMall) [text](../../web-front-vueCls/20250426_web-front-vueCliVuexShopMall) -->
 
