--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -59,6 +59,19 @@ sass -> scss
     WrapComonent.scss
 
 # 2025.06.28
+- 리넉스툴킬 설치 상태관리
+리눅스툴킷 설치
+npm i @reduxjs/toolkit
+npm i react-redux
+
+리넉스 모듈 폴더 생성 store
+리넉스 모듈 생성 -> modal.js
+modal.js -> 리듀스 생성
+index.js -> 프로바이더 Provider 컴포넌트 생성
+index.js -> 프로바이더 Provider 컴포넌트로 최상위 컴포넌트를 감싸준다.
+프로바이더 컴포넌트에 스토어를 프롭스로 설정한다.
+
+
 - 설치 리액트 라우터 돔
 npm i react-router-dom
 
