--- a/doc/20250524_작업.md
+++ b/doc/20250524_작업.md
@@ -59,6 +59,19 @@ sass -> scss
     WrapComonent.scss
 
 # 2025.06.28
+- 리액트 쿠키 설치 구현
+npm install react-cookie
+리액트 쿠키 가져오기 
+리액트 쿠기 설정하기
+시간, 날짜, 월, 년 셋터함수 => 만료일 Expires 익스파이얼스
+  오늘 하루동안 열리지 않음 설정
+
+모달창 닫기 => 하루동안 열리지 않음 셋팅
+- 오늘 날짜 + 1
+- 
+
+
+
 - 리넉스툴킬 설치 상태관리
 리눅스툴킷 설치
 npm i @reduxjs/toolkit
